# esp32-ledcontroller

./: partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/mdns/: CMakeLists.txt  mdns_service.cpp  mdns_service.h
main/ota/: CMakeLists.txt  ota_service.cpp  ota_service.h
main/web/: index.html
